--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,44 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.body {
+  /* background-color: black; */
+   /* height: 100vh;  */
 }
+.page {
+  padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  /* max-width: 1280px; */
+  min-width: 320px;
+  margin: 0 auto;
+  font-family: 'Inter', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+      max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .page {
+      max-width: 425px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page {
+      max-width: 320px;
+  }
+}
+
