--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,21 @@
     padding: 0 70px;
 }
 
+
+
+.header__nav{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    flex-grow:1;
+}
+
+.logo {
+    width: 38px;
+    height: 38px;
+    margin-top: 18px;
+}
+
 @media screen and (max-width: 768px) {
     .header {
         padding: 0 30px;
@@ -16,16 +31,4 @@
     .header {
         padding: 0 14px;
     }
-}
-
-.header__nav{
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-}
-
-.logo {
-    width: 38px;
-    height: 38px;
-    margin-top: 18px;
 }
