--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -83,6 +83,10 @@
 
 .preloader__round::before {
     z-index: 10;
-    background: #2BE080;
+    background: #2BE080; 
     animation: preloader-inside-red 1s ease-in-out infinite;
+}
+
+.preloader_hide {
+    display: none;
 }
