--- a/src/components/ButtonProfile/ButtonProfile.css
+++ b/src/components/ButtonProfile/ButtonProfile.css
@@ -1,39 +1,26 @@
 .button-profile{
-    text-decoration: none;
-}
-
-@media screen and (max-width: 768px) {
-    .button-profile {
-       display: none;
-    }
-  }
-
-.button-profile__container{
-    background: #FFFFFF;
-box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
-border-radius: 40px;
-height: 32px;
-display: flex;
-align-items:center;
-padding-left: 11px;
+  text-decoration: none;
+  background: #F4F4F4;
+  border-radius: 20px;
+  height: 32px;
+  display: flex;
+  align-items:center;
+  padding: 0 20px;
 }
 
 .button-profile__title {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 12px;  
-    color: #222222;
-    text-decoration: none;
-    padding: 0 4px 0 0;
-    margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: black;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
 
-.button-profile__img {
-width: 26px;
-height: 26px;
-background: #F5F5F5;
-border-radius: 50px;
-object-fit: scale-down;
-margin: 3px;
+@media screen and (max-width: 768px) {
+  .button-profile {
+    display: none;
+  }
 }
