--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -5,16 +5,8 @@
   justify-content: center;
   list-style: none;
   box-sizing: border-box;
-  margin: 0 50px 0 0;
+  padding-left: 44px;
 }
-
-
-@media screen and (max-width: 768px) {
-  .top-menu {
-     display: none;
-  }
-}
-
 
 .top-menu-item {
   margin-right:20px;
@@ -28,11 +20,17 @@
   text-decoration: none;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 18px;
   color: black;
 }
 
 .top-menu-link_accent{
   font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+  .top-menu {
+     display: none;
+  }
 }
