--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,7 +7,7 @@
   box-sizing:border-box;
 }
 
-.login__conteiner {
+.login__container {
   max-width: 396px;
   min-width: 260px;
   width: 100%;
@@ -76,6 +76,10 @@
   border-bottom: 1px solid #E8E8E8;
 }
 
+.profile__input:focus {
+  border-bottom: 1px solid #3456F3;
+}
+
 .login__button-submit {
   background: #3456F3;
   border-radius: 3px;
@@ -122,7 +126,7 @@
     padding: 56px 0 30px;
   }
 
-   .login__conteiner {
+   .login__container {
     align-items:center;
   }
 
