--- a/src/components/ButtonCollMemu/ButtonCollMemu.css
+++ b/src/components/ButtonCollMemu/ButtonCollMemu.css
@@ -1,5 +1,9 @@
-.button-call-menu{
+.button-call-menu {
   display: none;
+}
+
+.button-call-menu:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
