--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -15,7 +15,7 @@
   margin: 0 auto;
 }
 
-.promo__header{
+/* .promo__header{
   height: 74px;
   display: flex;
   justify-content: space-between;
@@ -31,7 +31,7 @@
   justify-content: center;
   list-style: none;
   box-sizing: border-box;
-}
+} */
 
 .promo__title {
   font-style: normal;
@@ -46,7 +46,7 @@
   margin: 0;
 }
 
-.promo__top-menu-item {
+/* .promo__top-menu-item {
   margin-right:10px;
   padding: 8px 20px;
   color: black;
@@ -73,7 +73,7 @@
   font-size: 12px;
   line-height: 16px;
   text-decoration: none; 
-}
+} */
 
 @media screen and (max-width: 768px) {
 
@@ -101,8 +101,8 @@
     padding-top:10vh;
   }
 
-  .promo__header{
+  /* .promo__header{
     padding: 0 4px;
-    }
+    } */
 
   }
