--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -25,7 +25,7 @@
   box-sizing: border-box;
 }
 
-.search-form__title {
+.search-form__input {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
