--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,6 +1,11 @@
 .movies-cardlist {
     margin: 0;
     padding: 0;
+    max-width: 1280px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
 }
 
 .movies-cardlist_card-container {
