--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -148,7 +148,7 @@
   cursor: pointer;
 }
     
-.profile__link{
+.profile__button-logout{
   font-style: normal;
   font-weight: normal;
   text-decoration: none;
@@ -158,8 +158,14 @@
   text-align: center;
   color: #EE3465;
   padding-top: 16px;
+  background-color: transparent;
+  border: none;
 }
-  
+ 
+.profile__button-logout:hover{
+  cursor: pointer;
+}
+
 .profile__input-error {
   color: #FF3055;
   padding-top: 10px;
