--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -121,6 +121,16 @@
   padding-top: 10px;
 }
 
+.login__error {
+  color: #FF3055;
+  text-align: center;
+  height: 20px;
+}
+
+.login__error-hidden {
+  visibility: hidden;
+}
+
 @media screen and (max-width: 425px) {
   .login {
     padding: 56px 0 30px;
