--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -42,10 +42,24 @@
   box-sizing: border-box;
   background-position: top;
   background-repeat: no-repeat;
-  background-image: url(../../images/save1.png);
+  background-image: url(../../images/save5d.svg);
   border: none;
   background-color: transparent;
   outline: none;
+
+}
+
+.movies-card__like:hover {
+  cursor: pointer;
+}
+
+
+.movies-card__like_isLike {
+  /* background-image: url(../../images/save5.svg); */
+}
+
+.movies-card__like_del {
+  /* background-image: url(../../images/d5.svg); */
 }
 
 .movies-card__duration {
