--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -142,7 +142,12 @@
   border: 0;
   margin: 69px 0 0;
 }
-    
+
+.profile__button-submit_inactive {
+  background: #F8F8F8;
+  color: #C2C2C2;
+}
+
 .profile__button-submit:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -169,6 +174,10 @@
 .profile__input-error {
   color: #FF3055;
   padding-top: 10px;
+}
+
+.profile__input-error_hidden {
+  visibility: hidden;
 }
 
 @media screen and (max-width: 425px) {
