--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -92,9 +92,15 @@
   width: 100%;
   height: 45px;
   border: 0;
-  margin: 69px 0 0;
+  /* margin: 69px 0 0; */
+  margin-top:auto;
 }
-    
+
+.register__button-submit_inactive {
+  background: #F8F8F8;
+  color: #C2C2C2;
+}
+
 .register__button-submit:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -121,6 +127,10 @@
   padding-top: 10px;
 }
 
+.register__input-error_hidden {
+  visibility: hidden;
+}
+
 @media screen and (max-width: 425px) {
   .register {
     padding: 56px 0 30px;
@@ -139,7 +149,7 @@
     font-size: 12px;
     line-height: 15px;
   }
-    
+  
   .register__link{
     font-size: 12px;
     line-height: 15px;
